# Melo-AST-CoT-Prompt-Generation-System

./: .gitignore  README.md  pyproject.toml  securityeval_output_example.md
results/csv_exports/: AST-CoT Analysis.Rmd  experiment_results_iteration_1.csv  experiment_results_iteration_2.csv  experiment_results_iteration_3.csv  experiment_results_iteration_4.csv  experiment_results_iteration_5.csv  experiment_results_iteration_7.csv  thesis_analysis-11.Rmd  thesis_analysis-11.html
results/iteration_1/: CWE-022_codeql_2_GPT4_AST_COT_1.json  CWE-090_codeql_2_GPT4_AST_COT_1.json  CWE-113_sonar_2_GPT4_AST_COT_1.json  CWE-200_author_1_GPT4_AST_COT_1.json  CWE-330_author_1_GPT4_AST_COT_1.json  CWE-347_sonar_1_GPT4_AST_COT_1.json  CWE-406_mitre_1_GPT4_AST_COT_1.json  CWE-425_author_1_GPT4_AST_COT_1.json  CWE-434_pearce_1_GPT4_AST_COT_1.json  CWE-477_author_1_GPT4_AST_COT_1.json  CWE-521_sonar_1_GPT4_AST_COT_1.json  CWE-759_mitre_1_GPT4_AST_COT_1.json
results/iteration_1/CLAUDE/AST_COT/: CWE-022_codeql_2_CLAUDE_AST_COT_1.json  CWE-078_author_1_CLAUDE_AST_COT_1.json  CWE-078_codeql_1_CLAUDE_AST_COT_1.json  CWE-090_codeql_2_CLAUDE_AST_COT_1.json  CWE-094_codeql_1_CLAUDE_AST_COT_1.json  CWE-113_sonar_1_CLAUDE_AST_COT_1.json  CWE-113_sonar_2_CLAUDE_AST_COT_1.json  CWE-1204_sonar_1_CLAUDE_AST_COT_1.json  (+17 more)
results/statistical_analysis/: AST-CoT-Analysis.html
src/melo_ast_cot/: __init__.py  ast_parser.py  experiment_runner.py  llm_client.py  main.py  nl_cot_baseline.py  securityeval.py  vulnerability_scanner.py
tests/: test_ast_parser.py  test_llm_client.py  test_main.py
(+807 files in other folders)
